chore: Rework post quote endpoint to return id only
